# phoxi_trigger

./: CMakeLists.txt  package.xml
src/: TriggerCameras.cpp  phoxi_trigger_node.cpp
